--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/paho-mqtt": "^1.0.6",
     "paho-mqtt": "^1.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
