--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/canvasjs": "^1.9.7",
     "@types/paho-mqtt": "^1.0.6",
+    "canvasjs": "^1.8.3",
     "flowbite": "^1.4.1",
     "igniteui-react-charts": "^16.15.0",
     "igniteui-react-core": "^16.15.0",
@@ -25,7 +27,8 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "10.4.5",
+    "esbuild": "0.13.4",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.4.4",
