--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.8.2",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@types/canvasjs": "^1.9.7",
     "@types/paho-mqtt": "^1.0.6",
+    "bootstrap": "^5.2.0-beta1",
     "canvasjs": "^1.8.3",
     "flowbite": "^1.4.1",
     "igniteui-react-charts": "^16.15.0",
@@ -21,10 +28,12 @@
     "paho-mqtt": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
+    "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "10.4.5",
