--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.0-beta1",
     "canvasjs": "^1.8.3",
     "flowbite": "^1.4.1",
+    "formik": "^2.2.9",
     "igniteui-react-charts": "^16.15.0",
     "igniteui-react-core": "^16.15.0",
     "igniteui-react-excel": "^16.15.0",
