--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
+    "react-select": "^5.3.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
