--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^17.0.45",
