--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@types/canvasjs": "^1.9.7",
     "@types/paho-mqtt": "^1.0.6",
+    "apexcharts": "^3.35.3",
     "bootstrap": "^5.2.0-beta1",
     "canvasjs": "^1.8.3",
     "flowbite": "^1.4.1",
@@ -26,10 +27,13 @@
     "igniteui-react-grids": "^16.15.0",
     "igniteui-react-maps": "^16.15.0",
     "igniteui-react-spreadsheet": "^16.15.0",
+    "konva": "^8.3.9",
     "paho-mqtt": "^1.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-konva": "^18.1.1",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2",
     "styled-components": "^5.3.5",
