--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.1.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
     "react-konva": "^18.1.1",
     "react-router-dom": "^6.2.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.10",
+    "@types/react-grid-layout": "^1.3.2",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "10.4.5",
     "esbuild": "0.13.4",
