--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2",
     "styled-components": "^5.3.5",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "use-force-update": "^1.0.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.45",
