--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "igniteui-react-maps": "^16.15.0",
     "igniteui-react-spreadsheet": "^16.15.0",
     "konva": "^8.3.9",
+    "leaflet": "^1.8.0",
+    "leaflet-ajax": "github:calvinmetcalf/leaflet-ajax",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-gpx": "^1.7.0",
+    "leaflet-realtime": "^2.2.0",
     "paho-mqtt": "^1.1.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
@@ -42,6 +47,10 @@
     "use-force-update": "^1.0.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.11",
+    "@types/leaflet-draw": "^1.0.5",
+    "@types/leaflet-gpx": "^1.3.3",
+    "@types/node": "^18.0.3",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.10",
     "@types/react-grid-layout": "^1.3.2",
