--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -21,6 +21,7 @@
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.2.0-beta1",
     "canvasjs": "^1.8.3",
+    "canvasjs-react-charts": "^1.0.5",
     "flowbite": "^1.4.1",
     "formik": "^2.2.9",
     "igniteui-react-charts": "^16.15.0",
