--- a/root/frontend/tsconfig.json
+++ b/root/frontend/tsconfig.json
@@ -16,7 +16,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["canvasjs"]
+    "types": ["node"],
+    "typeRoots": [ "../node_modules/@types" ]
   },
   "include": ["./src"]
 }
