--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -48,7 +48,8 @@
     "react-select": "^5.3.2",
     "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
-    "use-force-update": "^1.0.8"
+    "use-force-update": "^1.0.8",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.11",
