--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -20,11 +20,13 @@
     "@types/canvasjs": "^1.9.7",
     "@types/paho-mqtt": "^1.0.6",
     "apexcharts": "^3.35.3",
+    "axios": "^1.2.4",
     "bootstrap": "^5.2.0-beta1",
     "canvasjs": "^1.8.3",
     "canvasjs-react-charts": "^1.0.5",
     "flowbite": "^1.4.1",
     "formik": "^2.2.9",
+    "googleapis": "^110.0.0",
     "igniteui-react-charts": "^16.15.0",
     "igniteui-react-core": "^16.15.0",
     "igniteui-react-excel": "^16.15.0",
@@ -32,12 +34,14 @@
     "igniteui-react-grids": "^16.15.0",
     "igniteui-react-maps": "^16.15.0",
     "igniteui-react-spreadsheet": "^16.15.0",
+    "isomorphic-fetch": "^3.0.0",
     "konva": "^8.3.9",
     "leaflet": "^1.8.0",
     "leaflet-ajax": "github:calvinmetcalf/leaflet-ajax",
     "leaflet-draw": "^1.0.4",
     "leaflet-gpx": "^1.7.0",
     "leaflet-realtime": "^2.2.0",
+    "node-fetch": "^3.3.0",
     "paho-mqtt": "^1.1.0",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
