--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -11,20 +11,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.8.2",
-    "@mui/styled-engine-sc": "^5.8.0",
-    "@types/canvasjs": "^1.9.7",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@types/paho-mqtt": "^1.0.6",
-    "apexcharts": "^3.35.3",
-    "axios": "^1.2.4",
-    "bootstrap": "^5.2.0-beta1",
+    "apexcharts": "^3.39.0",
+    "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
     "canvasjs": "^1.8.3",
     "canvasjs-react-charts": "^1.0.5",
-    "flowbite": "^1.4.1",
+    "chart.js": "^4.2.1",
+    "chartjs": "^0.3.24",
+    "flowbite": "^1.6.5",
     "formik": "^2.2.9",
     "googleapis": "^110.0.0",
     "igniteui-react-charts": "^16.15.0",
@@ -36,41 +37,46 @@
     "igniteui-react-spreadsheet": "^16.15.0",
     "isomorphic-fetch": "^3.0.0",
     "konva": "^8.3.9",
-    "leaflet": "^1.8.0",
+    "leaflet": "^1.9.3",
     "leaflet-ajax": "github:calvinmetcalf/leaflet-ajax",
     "leaflet-draw": "^1.0.4",
     "leaflet-gpx": "^1.7.0",
     "leaflet-realtime": "^2.2.0",
     "node-fetch": "^3.3.0",
     "paho-mqtt": "^1.1.0",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
     "react-konva": "^18.1.1",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2",
-    "recharts": "^2.1.16",
+    "recharts": "^2.5.0",
     "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
+    "uplot": "^1.6.24",
+    "uplot-react": "^1.1.4",
     "use-force-update": "^1.0.8",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vis-timeline": "^7.7.2"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.11",
-    "@types/leaflet-draw": "^1.0.5",
-    "@types/leaflet-gpx": "^1.3.3",
-    "@types/node": "^18.0.3",
-    "@types/react": "^17.0.45",
-    "@types/react-dom": "^17.0.10",
+    "@types/canvasjs": "^1.9.8",
+    "@types/leaflet": "^1.9.3",
+    "@types/leaflet-draw": "^1.0.6",
+    "@types/leaflet-gpx": "^1.3.4",
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@types/react-grid-layout": "^1.3.2",
-    "@vitejs/plugin-react": "^1.0.7",
-    "autoprefixer": "10.4.5",
-    "esbuild": "0.13.4",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "10.4.14",
+    "esbuild": "0.17.18",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.3"
   }
 }
