--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "@types/paho-mqtt": "^1.0.6",
@@ -43,6 +44,7 @@
     "leaflet-gpx": "^1.7.0",
     "leaflet-realtime": "^2.2.0",
     "leaflet-toolbar": "^0.4.0-alpha.2",
+    "material-ui": "^0.20.2",
     "node-fetch": "^3.3.0",
     "paho-mqtt": "^1.1.0",
     "react": "^18.2.0",
