--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.10.1",
     "@types/paho-mqtt": "^1.0.6",
     "apexcharts": "^3.39.0",
     "axios": "^1.3.6",
