--- a/root/backend/package.json
+++ b/root/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -11,14 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "mongoose": "^6.6.5",
-    "mongose": "^0.0.2-security",
-    "nodemon": "^1.18.3"
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
   },
   "devDependencies": {
-    "@types/node": "^18.7.18"
+    "@types/node": "^18.7.18",
+    "nodemon": "^3.0.1"
   }
 }
