--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -21,28 +21,17 @@
     "@mui/x-data-grid": "^6.10.1",
     "@types/paho-mqtt": "^1.0.6",
     "apexcharts": "^3.39.0",
-    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
-    "canvasjs": "^1.8.3",
-    "canvasjs-react-charts": "^1.0.5",
-    "chart.js": "^4.2.1",
-    "chartjs": "^0.3.24",
     "flowbite": "^1.6.5",
     "formik": "^2.2.9",
-    "googleapis": "^110.0.0",
-    "igniteui-react-charts": "^16.15.0",
     "igniteui-react-core": "^16.15.0",
-    "igniteui-react-excel": "^16.15.0",
     "igniteui-react-gauges": "^16.15.0",
-    "igniteui-react-grids": "^16.15.0",
-    "igniteui-react-maps": "^16.15.0",
-    "igniteui-react-spreadsheet": "^16.15.0",
     "isomorphic-fetch": "^3.0.0",
-    "konva": "^8.3.9",
     "leaflet": "^1.9.3",
     "leaflet-ajax": "github:calvinmetcalf/leaflet-ajax",
     "leaflet-draw": "^1.0.4",
     "leaflet-gpx": "^1.7.0",
+    "leaflet-hotline": "^0.4.0",
     "leaflet-realtime": "^2.2.0",
     "leaflet-toolbar": "^0.4.0-alpha.2",
     "material-ui": "^0.20.2",
@@ -50,11 +39,9 @@
     "paho-mqtt": "^1.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
-    "react-konva": "^18.1.1",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2",
     "recharts": "^2.5.0",
@@ -63,8 +50,7 @@
     "uplot": "^1.6.24",
     "uplot-react": "^1.1.4",
     "use-force-update": "^1.0.8",
-    "uuid": "^9.0.0",
-    "vis-timeline": "^7.7.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/canvasjs": "^1.9.8",
