--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -39,6 +39,7 @@
     "paho-mqtt": "^1.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
